--- a/website/newsletter/243/index.mdx
+++ b/website/newsletter/243/index.mdx
@@ -74,9 +74,15 @@ Also, this release comes with an early preview of the Next.js 16. You can try up
 
 [**Node-API Support for React Native**](https://www.callstack.com/blog/announcing-node-api-support-for-react-native)
 
+A collaborative effort to bring Node-API into React Native. Node-API allows native code to interface with JavaScript in a runtime-independent and ABI-stable way. The PR adding Node-API support to Hermes is a work-in-progress, although most of the actual code is being upstreamed from React Native Windows.
+
+---
+
 [![Introducing react-native-wallet](/emails/issues/243/rnwallet.png)](https://blog.swmansion.com/introducing-react-native-wallet-90c1ee103d3e)
 
 [**Introducing react-native-wallet**](https://blog.swmansion.com/introducing-react-native-wallet-90c1ee103d3e)
+
+A new React Native library created by Expensify and Software Mansion. It streamlines the process of integrating payment cards into mobile apps for both Apple and Google Wallet (in-app provisioning), handling platform-specific complexity under the hood. It supports a wide array of card providers like Visa, MasterCard, Amex, or Discover, and ensures the integration follows the strict guidelines and best practices required by both Google and Apple.
 
 <Todo />
 
