--- a/website/newsletter/243/index.mdx
+++ b/website/newsletter/243/index.mdx
@@ -84,7 +84,26 @@ A collaborative effort to bring Node-API into React Native. Node-API allows nati
 
 A new React Native library created by Expensify and Software Mansion. It streamlines the process of integrating payment cards into mobile apps for both Apple and Google Wallet (in-app provisioning), handling platform-specific complexity under the hood. It supports a wide array of card providers like Visa, MasterCard, Amex, or Discover, and ensures the integration follows the strict guidelines and best practices required by both Google and Apple.
 
-<Todo />
+---
+
+- 👀 [react-native-keyboard-controller is now available in Expo Go](https://x.com/ziusko/status/1944717202617180409)
+- 🐦 [Legend List rewrite](https://x.com/jmeistrich/status/1944003988082364872): Improved performance, synchronous mounting
+- 🐦 [Interactive comparison of Expo fingerprint components to better understand OTA updates](https://x.com/Baconbrix/status/1944817782727581834)
+- 🐦 [react-native-worklets Bundle Mode](https://x.com/_tjzel/status/1945094982114705842): experimental feature that makes it possible to use third-party npm packages inside worklets.
+- 📜 [Introducing react-native-wallet](https://blog.swmansion.com/introducing-react-native-wallet-90c1ee103d3e) – new library that streamlines the process of integrating payment cards into mobile apps (in-app provisioning) and ensures the integration follows the strict guidelines and best practices for both Apple and Google Wallet.
+- 📜 [Announcing Node-API Support for React Native](https://www.callstack.com/blog/announcing-node-api-support-for-react-native): allows native code to interface with JavaScript in a runtime-independent and stable way
+- 📜 [Chromium Blog – Introducing Skia Graphite](https://blog.chromium.org/2025/07/introducing-skia-graphite-chromes.html): Google has released a brand new rasterization backend, as the original Chromium engine, Skia, was struggling with performance issues. Thanks to the new solution, Graphite, Motionmark 1.3 scores increased by almost 15% (on a Macbook Pro M3) and led to improvements for real-world metrics, such as interaction to next paint time or time to largest contentful paint).
+- 📜 [On-Device Apple LLM Support Comes to React Native](https://www.callstack.com/blog/on-device-apple-llm-support-comes-to-react-native): preview release of `@react-native-ai/apple` bringing on-device Apple foundation models to React Native.
+- 📦 [Metro 0.83.0 – Node 22.14.0 is now required](https://github.com/facebook/metro/releases/tag/v0.83.0)
+- 📦 [Module Federation Metro plugin](https://github.com/module-federation/metro): Callstack has made a new Metro plugin for Module Federation, which will help you to adapt React Native apps and start using Module Federation with Metro bundler.
+- 📦 [Radon IDE 1.9 – Radon Connect, switch between different project configurations, camera output on Android](https://github.com/software-mansion/radon-ide/releases/tag/v1.9.0)
+- 📦 [React Native Enterprise Framework 0.8.0 – New visual representation, support for RN 0.80, RNC CLI 19.1](https://github.com/callstack/rnef/releases/tag/v0.8.0)
+- 📦 [react-native-apple-llm – React Native plugin for Apple Intelligence and Foundation Models](https://github.com/deveix/react-native-apple-llm)
+- 📦 [tinybase 6.4.0 – new persister-react-native-sqlite module](https://github.com/tinyplex/tinybase/releases/tag/v6.4.0)
+- 🎙️ [RNR 337 \- Meta Quest for React Native with Markus Leyendecker](https://infinite.red/react-native-radio/rnr-337-meta-quest-for-react-native-w-markus-leyendecker)
+- 🎙️ [Rocket Ship 76 \- Unistyles 3.0, SwiftUI Filters, Nitro Hype & the Expo Debate](https://share.transistor.fm/s/b24027ab)
+- 🎥 [Expo \- How to build a Custom Expo Module](https://www.youtube.com/watch?v=zReFsPgUdMs)
+- 🎥 [Software Mansion \- Building Apple & Google Photos Clone in React Native](https://www.youtube.com/watch?v=tzpULSNg1Js)
 
 ---
 
