--- a/website/newsletter/243/index.mdx
+++ b/website/newsletter/243/index.mdx
@@ -109,13 +109,20 @@ A new React Native library created by Expensify and Software Mansion. It streaml
 
 ## 🔀 Other {#other}
 
-<Todo />
+- 📜 [CSS Tip: `selection-index()` and `selection-count()`](https://css-tip.com/element-index/)
+- 📜 [grep.app no longer limited to the pre-indexed repos](https://vercel.com/changelog/search-any-public-github-repo-with-grep)
+- 📦 [zshy \- A new no-bundler build tool for TypeScript libraries](https://github.com/colinhacks/zshy)
+- 📦 [Nuxt 4.0 \- `app/` directory, smarter data fetching, improved TS integration](https://nuxt.com/blog/v4)
+- 📦 [Deno 2.4 \- `deno bundle`, new way to import assets, `--preload` flag](https://deno.com/blog/v2.4)
+- 📦 [TypeGPU 0.6.0](https://github.com/software-mansion/TypeGPU/releases/tag/v0.6.0)
+- 📦 [Rspack 1.4.8 \- new Rust watcher, making Hot Module Replacement \~10% faster](https://github.com/web-infra-dev/rspack/releases/tag/v1.4.8)
+- 🔗 [jsdate.wtf \- “How well do you know JavaScript's Date class?”](https://jsdate.wtf/): An interesting 28-question quiz, testing how well you know the `Date` JS class.
+- 🔗 [A refreshed Matt Pocock’s mega-guide on how to create a npm package](https://www.totaltypescript.com/how-to-create-an-npm-package)
+- 🎙️ [Podrocket – Storybook 9 is leveling up UI testing with Michael Shilman](https://podrocket.logrocket.com/storybook-9-leveling-up-ui-testing-michael-shilman)
 
 ---
 
 ## 🤭 Fun {#fun}
-
-<Todo />
 
 [![alt](/emails/issues/243/meme.jpg)](https://x.com/thekitze/status/1943289841887641937)
 
