--- a/website/newsletter/243/index.mdx
+++ b/website/newsletter/243/index.mdx
@@ -100,10 +100,10 @@ A new React Native library created by Expensify and Software Mansion. It streaml
 - 📦 [React Native Enterprise Framework 0.8.0 – New visual representation, support for RN 0.80, RNC CLI 19.1](https://github.com/callstack/rnef/releases/tag/v0.8.0)
 - 📦 [react-native-apple-llm – React Native plugin for Apple Intelligence and Foundation Models](https://github.com/deveix/react-native-apple-llm)
 - 📦 [tinybase 6.4.0 – new persister-react-native-sqlite module](https://github.com/tinyplex/tinybase/releases/tag/v6.4.0)
-- 🎙️ [RNR 337 \- Meta Quest for React Native with Markus Leyendecker](https://infinite.red/react-native-radio/rnr-337-meta-quest-for-react-native-w-markus-leyendecker)
-- 🎙️ [Rocket Ship 76 \- Unistyles 3.0, SwiftUI Filters, Nitro Hype & the Expo Debate](https://share.transistor.fm/s/b24027ab)
-- 🎥 [Expo \- How to build a Custom Expo Module](https://www.youtube.com/watch?v=zReFsPgUdMs)
-- 🎥 [Software Mansion \- Building Apple & Google Photos Clone in React Native](https://www.youtube.com/watch?v=tzpULSNg1Js)
+- 🎙️ [RNR 337 – Meta Quest for React Native with Markus Leyendecker](https://infinite.red/react-native-radio/rnr-337-meta-quest-for-react-native-w-markus-leyendecker)
+- 🎙️ [Rocket Ship 76 – Unistyles 3.0, SwiftUI Filters, Nitro Hype & the Expo Debate](https://share.transistor.fm/s/b24027ab)
+- 🎥 [Expo – How to build a Custom Expo Module](https://www.youtube.com/watch?v=zReFsPgUdMs)
+- 🎥 [Software Mansion – Building Apple & Google Photos Clone in React Native](https://www.youtube.com/watch?v=tzpULSNg1Js)
 
 ---
 
@@ -111,12 +111,12 @@ A new React Native library created by Expensify and Software Mansion. It streaml
 
 - 📜 [CSS Tip: `selection-index()` and `selection-count()`](https://css-tip.com/element-index/)
 - 📜 [grep.app no longer limited to the pre-indexed repos](https://vercel.com/changelog/search-any-public-github-repo-with-grep)
-- 📦 [zshy \- A new no-bundler build tool for TypeScript libraries](https://github.com/colinhacks/zshy)
-- 📦 [Nuxt 4.0 \- `app/` directory, smarter data fetching, improved TS integration](https://nuxt.com/blog/v4)
-- 📦 [Deno 2.4 \- `deno bundle`, new way to import assets, `--preload` flag](https://deno.com/blog/v2.4)
+- 📦 [zshy – A new no-bundler build tool for TypeScript libraries](https://github.com/colinhacks/zshy)
+- 📦 [Nuxt 4.0 – `app/` directory, smarter data fetching, improved TS integration](https://nuxt.com/blog/v4)
+- 📦 [Deno 2.4 – `deno bundle`, new way to import assets, `--preload` flag](https://deno.com/blog/v2.4)
 - 📦 [TypeGPU 0.6.0](https://github.com/software-mansion/TypeGPU/releases/tag/v0.6.0)
-- 📦 [Rspack 1.4.8 \- new Rust watcher, making Hot Module Replacement \~10% faster](https://github.com/web-infra-dev/rspack/releases/tag/v1.4.8)
-- 🔗 [jsdate.wtf \- “How well do you know JavaScript's Date class?”](https://jsdate.wtf/): An interesting 28-question quiz, testing how well you know the `Date` JS class.
+- 📦 [Rspack 1.4.8 – new Rust watcher, making Hot Module Replacement \~10% faster](https://github.com/web-infra-dev/rspack/releases/tag/v1.4.8)
+- 🔗 [jsdate.wtf – “How well do you know JavaScript's Date class?”](https://jsdate.wtf/): An interesting 28-question quiz, testing how well you know the `Date` JS class.
 - 🔗 [A refreshed Matt Pocock’s mega-guide on how to create a npm package](https://www.totaltypescript.com/how-to-create-an-npm-package)
 - 🎙️ [Podrocket – Storybook 9 is leveling up UI testing with Michael Shilman](https://podrocket.logrocket.com/storybook-9-leveling-up-ui-testing-michael-shilman)
 
