--- a/website/newsletter/243/index.mdx
+++ b/website/newsletter/243/index.mdx
@@ -53,7 +53,7 @@ Also, this release comes with an early preview of the Next.js 16. You can try up
 - 📜 [Architecting with Constraints: A Pragmatic Guide](https://www.lorenstew.art/blog/always-architect-with-contraints)
 - 📜 [How To Create Kinetic Image Animations with React-Three-Fiber](https://tympanus.net/codrops/2025/07/09/how-to-create-kinetic-image-animations-with-react-three-fiber/)
 - 📜 [Three.js Instances: Rendering Multiple Objects Simultaneously](https://tympanus.net/codrops/2025/07/10/three-js-instances-rendering-multiple-objects-simultaneously/)
-- 📦 [TanStack Query 5.82.0 / 5.83.0 – new mutationOptions object](https://github.com/TanStack/query/releases/tag/v5.83.0)
+- 📦 [TanStack Query 5.82.0 / 5.83.0 – new `mutationOptions` object](https://github.com/TanStack/query/releases/tag/v5.83.0)
 - 📦 [TanStack Router 1.26.0](https://github.com/TanStack/router/releases/tag/v1.126.0): New [custom React Vite plugin](https://github.com/TanStack/router/discussions/2863#discussioncomment-13713677), through which the library will soon stop auto-configuring React/Solid Vite plugins, thus increasing the possibilities of configuration on your own.
 - 📦 [TanStack Router 1.27.0 – seroval is being used for SSR](https://github.com/TanStack/router/releases/tag/v1.127.0): It permits to serialize data to JSONs that aren’t usually serializable.
 - 📦 [oxc 0.77 – support for styled-components plugin](https://github.com/oxc-project/oxc/pull/12234)
