--- a/website/newsletter/243/index.mdx
+++ b/website/newsletter/243/index.mdx
@@ -26,7 +26,17 @@ import Support from "../_support.mdx";
 
 ## 💸 Sponsor {#sponsor1}
 
-<Todo />
+[![Free AI Code Reviews in IDE - VSCode, Cursor, Windsurf](/emails/issues/243/coderabbit.png)](https://coderabbit.link/1yHoMHx)
+
+**[Free AI Code Reviews in IDE - VSCode, Cursor, Windsurf](https://coderabbit.link/1yHoMHx)**
+
+[CodeRabbit](https://coderabbit.link/6ZXULSK) is the AI code review platform purpose built to speed up code reviews and improve code quality. Integrating seamlessly into git workflows and existing toolchains, it delivers codebase-aware reviews and supports all programming languages.
+
+Now they are excited to deliver AI code reviews directly in VS Code, Cursor, and Windsurf–letting you and your team (vibe) code with confidence and review while keeping in flow.
+
+Even better: code reviews in the IDE are free! That’s right: line-by-line reviews and one-click fixes, all in your IDE at no cost to you.
+
+[Install the extension](https://coderabbit.link/LszC1pB) and start vibe checking your code today!
 
 ---
 
@@ -42,6 +52,7 @@ Also, this release comes with an early preview of the Next.js 16. You can try up
 
 ---
 
+- 💸 [The Road to Next - Master Full-Stack Web Development with Next.js 15 and React 19](https://www.road-to-next.com/?utm_source=newsletter&utm_medium=email&utm_campaign=this_week_in_react_1.1)
 - 👀 [Next.js draft PR – Initial support for typed links](https://github.com/vercel/next.js/pull/81528): Introduces a new typed links API for Next.js that provides type-safe navigation built on top of the new `experimental.typedRoutes` feature. Great move from the team as type-safe navigation is always welcomed.
 - 👀 [React Compiler PR – full docs rewrite](https://github.com/reactjs/react.dev/pull/7868): Another signal that React Compiler is approaching to be announced as stable thus needs a fully-fledged documentation.
 - 📖 [New React Router middleware documentation](https://reactrouter.com/how-to/middleware): A refreshed version of the documentation of React Router’s middleware has appeared, which describes core concepts and common patterns along with many code examples.
@@ -53,6 +64,7 @@ Also, this release comes with an early preview of the Next.js 16. You can try up
 - 📜 [Architecting with Constraints: A Pragmatic Guide](https://www.lorenstew.art/blog/always-architect-with-contraints)
 - 📜 [How To Create Kinetic Image Animations with React-Three-Fiber](https://tympanus.net/codrops/2025/07/09/how-to-create-kinetic-image-animations-with-react-three-fiber/)
 - 📜 [Three.js Instances: Rendering Multiple Objects Simultaneously](https://tympanus.net/codrops/2025/07/10/three-js-instances-rendering-multiple-objects-simultaneously/)
+- 💸 [Convex launched a collaboration with Resend](https://convex.link/resendthiswk)
 - 📦 [TanStack Query 5.82.0 / 5.83.0 – new `mutationOptions` object](https://github.com/TanStack/query/releases/tag/v5.83.0)
 - 📦 [TanStack Router 1.26.0](https://github.com/TanStack/router/releases/tag/v1.126.0): New [custom React Vite plugin](https://github.com/TanStack/router/discussions/2863#discussioncomment-13713677), through which the library will soon stop auto-configuring React/Solid Vite plugins, thus increasing the possibilities of configuration on your own.
 - 📦 [TanStack Router 1.27.0 – seroval is being used for SSR](https://github.com/TanStack/router/releases/tag/v1.127.0): It permits to serialize data to JSONs that aren’t usually serializable.
@@ -64,7 +76,18 @@ Also, this release comes with an early preview of the Next.js 16. You can try up
 
 ## 💸 Sponsor {#sponsor2}
 
-<Todo />
+[![Embrace: User-focused observability for mobile and web](/emails/issues/243/embrace.jpeg)](https://embrace.io/?utm_source=newsletter&utm_medium=paid&utm_campaign=twir-7-16-2025)
+
+**[Embrace: User-focused observability for mobile and web](https://embrace.io/?utm_source=newsletter&utm_medium=paid&utm_campaign=twir-7-16-2025)**
+
+What if you could connect every performance signal directly to the user it happened to, what they were doing, and whether it mattered? With Embrace, you finally get observability that surfaces real user impact.
+
+- 📊 Track Core Web Vitals, crashes, network requests, and custom events—all tied to full user sessions. 
+- 👤 Get deep insights into users with session stitching and play-by-plays of every user experience. 
+- 🔍 Discover the root cause faster with high-fidelity data, including session timelines, performance traces, and user journeys. 
+- 🔭 Embrace is built on OpenTelemetry. Own your data, integrate it anywhere, and avoid the rigid pricing and limitations of all-in-one platforms.
+
+Learn more, including how to get started free, at [embrace.io](https://embrace.io/?utm_source=newsletter&utm_medium=paid&utm_campaign=twir-7-16-2025).
 
 ---
 
@@ -86,6 +109,7 @@ A new React Native library created by Expensify and Software Mansion. It streaml
 
 ---
 
+- 💸 [PostHog - How to set up React Native surveys](https://go.posthog.com/twir-jul16)
 - 👀 [react-native-keyboard-controller is now available in Expo Go](https://x.com/ziusko/status/1944717202617180409)
 - 🐦 [Legend List rewrite](https://x.com/jmeistrich/status/1944003988082364872): Improved performance, synchronous mounting
 - 🐦 [Interactive comparison of Expo fingerprint components to better understand OTA updates](https://x.com/Baconbrix/status/1944817782727581834)
